Hygiene: Whitespace fixes

--- a/less/screen-beta.less
+++ b/less/screen-beta.less
@@ -96,7 +96,7 @@ div#content {
 			top: 0;
 		}
 
-		&:after{
+		&:after {
 			content: close-quote;
 			font-size: 3em;
 			line-height: 1;
@@ -117,7 +117,10 @@ div#content {
 		color: #333;
 	}
 
-	#toc #toctitle, .toc #toctitle, #toc .toctitle, .toc .toctitle {
+	#toc #toctitle,
+	.toc #toctitle,
+	#toc .toctitle,
+	.toc .toctitle {
 		text-align: left;
 	}
 
